--- a/.github/workflows/nightly-training.yml
+++ b/.github/workflows/nightly-training.yml
@@ -21,6 +21,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch || 'main' }}
+      - name: docker ls
+        run: |
+          docker image ls
       - name: Check user and access root
         run: |
           whoami
